@startuml

title __ITEMS's Class Diagram__\n

  namespace PaooGame {
    namespace Items {
      abstract class PaooGame.Items.Character {
          {static} + DEFAULT_CREATURE_HEIGHT : int
          {static} + DEFAULT_CREATURE_WIDTH : int
          {static} + DEFAULT_LIFE : int
          {static} + DEFAULT_SPEED : float
          # alive : boolean
          # attacking : int
          # immunityFrames : int
          # left : boolean
          # life : int
          # right : boolean
          # running : boolean
          # speed : float
          # xMove : float
          # yMove : float
          + Character()
          + GetAlive()
          + GetAttacking()
          + GetLife()
          + GetRight()
          + GetSpeed()
          + GetXMove()
          + GetYMove()
          + Hit()
          + Move()
          + MoveX()
          + MoveY()
          + SetAlive()
          + SetLife()
          + SetSpeed()
          + SetXMove()
          + SetYMove()
          # Collide()
      }
    }
  }
  

  namespace PaooGame {
    namespace Items {
      class PaooGame.Items.CharacterFactory {
          {static} + GetCharacter()
      }
    }
  }
  

  namespace PaooGame {
    namespace Items {
      class PaooGame.Items.Hero {
          + Draw()
          + Hero()
          + Update()
          - GetInput()
      }
    }
  }
  

  namespace PaooGame {
    namespace Items {
      abstract class PaooGame.Items.Item {
          # height : int
          # time : long
          # width : int
          # x : float
          # y : float
          {abstract} + Draw()
          + GetHeight()
          + GetWidth()
          + GetX()
          + GetY()
          + Item()
          + SetHeight()
          + SetWidth()
          + SetX()
          + SetY()
          {abstract} + Update()
          {abstract} # Collide()
      }
    }
  }
  

  namespace PaooGame {
    namespace Items {
      class PaooGame.Items.Monster {
          - offset : float
          - origin : float
          - speed : int
          + Draw()
          + Monster()
          + Update()
      }
    }
  }
  

  PaooGame.Items.Character -up-|> PaooGame.Items.Item
  PaooGame.Items.Character o-- PaooGame.Animation.Animation : idleLeft
  PaooGame.Items.Character o-- PaooGame.Animation.Animation : idleRight
  PaooGame.Items.Character o-- PaooGame.Animation.Animation : runLeft
  PaooGame.Items.Character o-- PaooGame.Animation.Animation : runRight
  PaooGame.Items.Hero -up-|> PaooGame.Items.Character
  PaooGame.Items.Hero o-- PaooGame.Animation.Animation : attackLeft
  PaooGame.Items.Hero o-- PaooGame.Animation.Animation : attackRight
  PaooGame.Items.Item o-- PaooGame.RefLinks : refLink
  PaooGame.Items.Monster -up-|> PaooGame.Items.Character


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
